creating the html framework

--- a/index.html
+++ b/index.html
@@ -9,9 +9,105 @@
   <title>Resume</title>
 </head>
 
-
 <body>
-  <h1>Sup</h1>
+  <header>
+    <h1>YOUR NAME HERE</h1>
+    <h4>JOB TITLE HERE</h4>
+  </header>
+  <main>
+    <aside>
+      <div id="info">
+        <h1>Info</h1>
+        <div>
+          <p><b>Address</b></p>
+          <p>123 Yo Momma's House, Weed Ln, MA</p>
+        </div>
+        <div>
+          <p><b>Phone</b></p>
+          <a href="tel:1-208-888-9999">208-888-9999</a>
+        </div>
+        <div>
+          <p><b>E-Mail</b></p>
+          <a href="mailto: fake@fakety.com">fake@fakety.com</a>
+        </div>
+      </div>
+      <div id="skills">
+        <h1>Skrills</h1>
+        <!--  -->
+        <ul>
+          <li>
+            <p>Charisma</p>
+            <progress value="90" max="100"></progress>
+          </li>
+          <li>
+            <p>Chungus</p>
+            <progress value="25" max="100"></progress>
+          </li>
+          <li>
+            <p>Energy</p>
+            <progress value="85" max="100"></progress>
+          </li>
+          <li>
+            <p>Dark Ammo</p>
+            <progress value="90" max="100"></progress>
+          </li>
+          <li>
+            <p>Strength</p>
+            <progress value="70" max="100"></progress>
+          </li>
+          <li>
+            <p>Purple</p>
+            <progress value="90" max="100"></progress>
+          </li>
+          <li>
+            <p>Epicness</p>
+            <progress value="90" max="100"></progress>
+          </li>
+          <li>
+            <p>Unepicness</p>
+            <progress value="10" max="100"></progress>
+          </li>
+        </ul>
+      </div>
+    </aside>
+    <section>
+      <div id="profile">
+        <h3>Profile</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptatibus optio rem expedita,
+          necessitatibus nihil animi ratione consectetur aperiam fuga officia laboriosam incidunt voluptatum corrupti
+          eveniet est quis. Officiis, delectus.</p>
+      </div>
+      <div id="job-history">
+        <h3>Employment History</h3>
+        <div class="job">
+          <div>
+            <h5>Job Title</h5>
+            <p>dates</p>
+          </div>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis dolorem iusto optio placeat,
+            provident ullam, rerum culpa cum maiores ipsam laborum omnis est rem earum quia animi aliquam qui porro?</p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, consequatur.</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, consequatur.</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, consequatur.</li>
+          </ul>
+        </div>
+        <div class="job">
+          <div>
+            <h5>Job Title</h5>
+            <p>dates</p>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, qui quidem. Corrupti, dolore repellendus
+            magni aut enim porro voluptatem. Cum alias, magnam fuga et soluta unde itaque harum obcaecati minima.</p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, harum.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, harum.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, harum.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
