added fun stuff

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>YOUR NAME HERE</h1>
     <h4>JOB TITLE HERE</h4>
   </header>
-  <main>
+  <main class="d-flex">
     <aside>
       <div id="info">
         <h1>Info</h1>
@@ -80,7 +80,7 @@
       <div id="job-history">
         <h3>Employment History</h3>
         <div class="job">
-          <div>
+          <div class="d-flex justify-content-between">
             <h5>Job Title</h5>
             <p>dates</p>
           </div>
@@ -93,7 +93,7 @@
           </ul>
         </div>
         <div class="job">
-          <div>
+          <div class="d-flex justify-content-between">
             <h5>Job Title</h5>
             <p>dates</p>
           </div>
